<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">


  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/showBallLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0"
      tools:visibility="visible">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPermission"
        android:layout_width="264dp"
        android:layout_height="143dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" >

      <Button
          android:id="@+id/btnAllowLoc"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/enable_device_location" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBall"
        android:layout_width="264dp"
        android:layout_height="143dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardPermission">

      <Button
          android:id="@+id/btnBack"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="64dp"
          android:layout_marginTop="80dp"
          android:width="128dp"
          android:text="@string/back" />

      <Button
          android:id="@+id/btnShow"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="64dp"
          android:layout_marginTop="16dp"
          android:width="128dp"
          android:text="@string/show_ball" />
    </androidx.cardview.widget.CardView>

  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/detectLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDetectTrack"
        android:layout_width="264dp"
        android:layout_height="143dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

      <Button
          android:id="@+id/btnTrack"
          android:layout_width="144dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="60dp"
          android:layout_marginTop="72dp"
          android:enabled="false"
          android:text="@string/track_ball"
          android:textColor="#FFFFFF"
          android:visibility="gone" />

      <Button
          android:id="@+id/btnDetect"
          android:layout_width="144dp"
          android:layout_height="48dp"
          android:layout_marginStart="60dp"
          android:layout_marginTop="16dp"
          android:enabled="false"
          android:text="@string/detect_ball" />

    </androidx.cardview.widget.CardView>
  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/loadingLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:visibility="gone">

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardLoader"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLoader"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:visibility="visible"
        app:cardBackgroundColor="#E3E3E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

      <TextView
          android:id="@+id/txvCardLoader"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="40dp"
          android:layout_marginTop="80dp"
          android:text="@string/loading"
          android:textColor="#616161" />

      <ProgressBar
          android:id="@+id/progressBar"
          style="?android:attr/progressBarStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="40dp"
          android:layout_marginTop="16dp" />
    </androidx.cardview.widget.CardView>
  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/chooseHoleLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:visibility="gone">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardChoose"
        android:layout_width="264dp"
        android:layout_height="143dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="80dp"
          android:layout_marginTop="8dp"
          android:text="@string/choose_a_hole"
          tools:ignore="TextContrastCheck" />

      <Button
          android:id="@+id/btnChoose"
          android:layout_width="144dp"
          android:layout_height="48dp"
          android:layout_marginStart="60dp"
          android:layout_marginTop="80dp"
          android:text="@string/choose" />

      <Spinner
          android:id="@+id/holes_spinner"
          android:layout_width="224dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="32dp"
          android:dropDownWidth="256dp"
          android:minHeight="48dp"
          tools:ignore="SpeakableTextPresentCheck" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="209dp"
        android:layout_height="209dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057"
        app:srcCompat="@drawable/golfdude" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

